work on adding sql support

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.1'
 
 services:
-
   db:
     image: mariadb
     restart: always
@@ -9,4 +8,6 @@ services:
       MYSQL_ROOT_PASSWORD: foobar123
       MYSQL_USER: pipefire
       MYSQL_PASSWORD: foobar123
-
+      MYSQL_DATABASE: pipefire
+    ports:
+      - 3306:3305
