--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,9 +20,7 @@ services:
     image: "masenocturnal/sshd:latest" 
     environment:
       SSH_USERS: "test:1002:1002"
-      SFTP_MODE: "true" 
-    ports:
-      - 22
+      SFTP_MODE: "true"      
     volumes:
       - ./bfp:/data
       - ~/.ssh/id_rsa.pub:/etc/authorized_keys/test
@@ -32,12 +30,11 @@ services:
   anz:
     image: "masenocturnal/sshd:latest"      
     environment:
-      SSH_USERS: "test:1002:1002"      
-    ports:
-      - 22
+      SSH_USERS: "test:1002:1002"
+      SFTP_MODE: "true"      
     volumes:
+      - ./data:/data
       - ~/.ssh/id_rsa.pub:/etc/authorized_keys/test
-      - sftp-data:/data
     networks:
       app_net:
         ipv4_address: 172.20.1.4
@@ -45,29 +42,17 @@ services:
     image: "masenocturnal/sshd:latest"    
     environment:
       SSH_USERS: "test:1002:1002"
-    ports:
-      - 22
+      SFTP_MODE: "true"
     volumes:
+      - ./data:/data
       - ~/.ssh/id_rsa.pub:/etc/authorized_keys/test
-      - sftp-data:/data
     networks:
       app_net:
         ipv4_address: 172.20.1.5
-  rabbitmq:
-    image: rabbitmq:3.8.2-rc.1-management
-    ports:
-      - "5672:5672"
-      - "5671:5671"
-      - "15672:15672"
-      - "15671:15671"
-    networks:
-      app_net:
-        ipv4_address: 172.20.1.6
+
 networks:
   app_net:
     ipam:
       config:
         - subnet: 172.20.1.0/24
-
-volumes:
-  sftp-data:
+          
