--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -54,12 +54,12 @@ services:
       app_net:
         ipv4_address: 172.20.1.5
   rabbitmq:
-    image: rabbitmq:3.8
+    image: rabbitmq:3.9-management
     ports:
-      - "5672:5672"
-      - "5671:5671"
-      - "15672:15672"
-      - "15671:15671"
+      - 5672:5672
+      - 5671:5671
+      - 15672:15672
+      - 15671:15671
     networks:
       app_net:
         ipv4_address: 172.20.1.6
